# ConsoleChatOnCPP

./: CMakeLists.txt  README.md  compile_all.sh
src/: client.cpp  client_message_screen.cpp  client_messages_screen.cpp  consts.hpp  fifo_channel.cpp  fifo_channel.hpp  logger.cpp  logger.hpp  printer.cpp  printer.hpp  server.cpp
